mailnews/base/src/nsMsgPrintEngine.cpp fails with no member named 'GetGlobalPrintSettings' in 'nsIWebBrowserPrint'
Categories
(MailNews Core :: Printing, defect)
Tracking
(thunderbird_esr78 unaffected)
| Tracking | Status | |
|---|---|---|
| thunderbird_esr78 | --- | unaffected |
People
(Reporter: KaiE, Assigned: KaiE)
Details
Attachments
(1 file)
Thunderbird build regression caused by bug 1652344, which removes globalPrintSettings from nsIWebBrowserPrint.idl
Looking at tests that were changed at the same time, there might be an alternative to obtain that object. I'll do a quick experiment to see if that builds.
| Assignee | ||
Comment 1•6 years ago
|
||
Updated•6 years ago
|
Pushed by kaie@kuix.de:
https://hg.mozilla.org/comm-central/rev/bdd0a6a0d06a
mailnews/base/src/nsMsgPrintEngine.cpp fails with no member named 'GetGlobalPrintSettings' in 'nsIWebBrowserPrint'. r=rjl
| Assignee | ||
Comment 3•6 years ago
|
||
Reopening. While this patch fixed the broken build, we don't know yet if it actually still works.
Who could help to test if printing and printer settings still work on nightly?
| Assignee | ||
Comment 4•6 years ago
|
||
My local build passed.
I could use all printer related settings, page setup, print preview, and printing to pdf works.
Updated•6 years ago
|
Updated•6 years ago
|
Description
•