Bug 1652475 - mailnews/base/src/nsMsgPrintEngine.cpp fails with no member named 'GetGlobalPrintSettings' in 'nsIWebBrowserPrint'. r=rjl

Differential Revision: https://phabricator.services.mozilla.com/D83333

--HG--
extra : amend_source : 18727e0b905b40af18a0ad5b210f20ccc6132200